Amended pom.xml; JDK 14 / xjc issues