@@ -17,6 +17,11 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!-- Implementation dependencies -->
+        <javax-activation.version>1.1.1</javax-activation.version>
+        <javax-activation-api.version>1.2.0</javax-activation-api.version>
+        <jaxb-xjc.version>2.3.1</jaxb-xjc.version>
+
+        <jaxws-api.version>2.3.1</jaxws-api.version>
         <com-google-guava.version>26.0-jre</com-google-guava.version>
 
         <com-resolvix-lib-service.version>0.0.1-SNAPSHOT</com-resolvix-lib-service.version>
@@ -28,6 +33,24 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
+
+        <!-- <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>${javax-activation.version}</version>
+        </dependency> -->
+
+        <dependency>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>${jaxws-api.version}</version>
+        </dependency>
+
         <!-- Implementation dependencies -->
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -87,6 +110,11 @@
                     <version>2.22.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.1.1</version>
                 </plugin>
@@ -108,6 +136,36 @@
 
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>11</release>
+                    <source>src/main/</source>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--illegal-access=permit</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/jaxb</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
                 <executions>
@@ -119,11 +177,28 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!-- <packageName>com.resolvix.soa</packageName> -->
+                    <packageName>com.resolvix.soa</packageName>
                     <sources>
-                        <source>src/xsd</source>
+                        <source>src/main/xsd</source>
                     </sources>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>javax.activation-api</artifactId>
+                        <version>${javax-activation-api.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>jaxb-impl</artifactId>
+                        <version>2.3.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.sun.xml.bind</groupId>
+                        <artifactId>jaxb-xjc</artifactId>
+                        <version>${jaxb-xjc.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
